# local-stationery-store

./: .gitignore  CLAUDE.md  DISTRIBUTION.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml  pr.yml  release.yml  version.yml
scripts/: bump-version.cjs  next-version.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/inventory/: InventoryScreen.tsx  ProductFormModal.tsx  RestockModal.tsx
src/components/pos/: Cart.test.tsx  Cart.tsx  CheckoutModal.tsx  CustomerInput.tsx  POSScreen.tsx  SellUnitModal.tsx
src/components/sales/: SalesScreen.tsx
src/components/settings/: CategoriesCustomersModal.tsx  SetPasswordModal.tsx  SettingsScreen.tsx
src/components/shared/: LockScreen.tsx  OnboardingGuide.tsx  Sidebar.tsx  StockAlerts.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  money-input.tsx  multi-select.tsx  select.tsx  toaster.tsx
src/hooks/: useBarcodeScanner.ts  useDebounce.ts
src/i18n/: i18n.test.ts  index.ts  translations.ts
src/i18n/locales/: en.ts  es.ts
src/lib/: calc.test.ts  calc.ts  crypto.test.ts  crypto.ts  stock.test.ts  stock.ts  text.ts  utils.test.ts  utils.ts
src/services/: db.ts  excel.ts  system.ts  updater.ts
src/stores/: app.ts  cart.test.ts  cart.ts  settings.ts  toast.ts
src/test/: setup.ts
src/types/: index.ts
